# todolist-py130

./: .gitignore  README.md  STUDY_GUIDE.txt  practice.py  to_do_list.py  todo.py
Exercises/CHALLENGES/: anagram.py  beer_song.py  octal.py  octal_test.py  perfect_number.py  point_mutations.py  roman_numerals.py  scrabble_score.py  series.py  sum_of_multiples.py  test_beer.py  test_scrabble_score.py  test_sum.py  triangle.py  triangle_test.py
Exercises/advanced/: longest_sentence.py  longest_sentences.txt
Exercises/easy_1/: basic_gen.py  concat_strings.py  even.py  length_strings.py  nested_gen.py  product.py  remove_none.py  reverse_string.py  square.py  user_input.py
Exercises/easy_2/: build_profile.py  capture_rest.py  concat_strings.py  display_info.py  ignore_middle.py  nested_unpacking.py  unpack_list.py
args/: hard.py  practice.py
closures/: closures.py
decorators/: decorators.py
files/: example.txt  examples.py
generators/: practice.py  practice2.py  practice3.py
high_order/: high_order.py  practice1.py  practice2.py  reduce.py
my_proj/: pyproject.toml
side_effects/: side_effects.py
study_guide/: SEAT.py  STUDY_GUIDE.txt  closure.py  file_handling.py  first_class.py  generators.py  lambda.py  log.txt  pfa.py  practice.py
testing/: test_add.py
to_do_list/: .coverage  test_todolist.py  to_do_list.py
todolist_package/: README.md  pyproject.toml
todolist_package/src/todolist_JDAROV/: to_do_list.py
todolist_package/src/todolist_JDAROV.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
unpacking/: practice.py
(+6 files in other folders)
